@@ -4,6 +4,8 @@
   - SPVM::Config extra_linker_flag related methods is removed
     because I want to use extra_linker_flag for spvmcc --lddlflags option for future
   - implement spvmcc -O option
+  - add --ccflags option to spvmcc
+  - add --lddlflags option to spvmcc
 0.0930 2021-01-28
   - remove subroutine precompile descriptor. SPVM become only support whole package precompile.
   - add SPVM::Builder::Exe again. This is more stable before SPVM::Builder::Exe because compiler and runtime and SPVM module sources is embeded to exe files directry.
